# WoH_CHS

./: .gitignore  README.md
Analysis/: note.h
patches/data/: woh_chs_fixed.txt  woh_chs_fixed.txt.orig
patches/launcher/: .gitignore  CMakeLists.txt  dll.cpp  justfile  launcher.cpp
patches/launcher/dotgit/: index
patches/launcher/dotgit/logs/: HEAD
patches/launcher/dotgit/refs/heads/: master
patches/launcher/hooks/: createwindowexw.hpp  decompress_mzx.hpp  fix_buffer_size.hpp  load_text_script.hpp  load_text_script_wrapper.hpp
patches/launcher/utils/: log.cpp  log.h
patches/release 0.5/: README.txt  steam_appid.txt  魔法使之夜汉化测试v0.5.7z
patches/release 1.0.4/: README.txt
switch/: decode.py  woh_chs_fixed.txt
tools/: build_mapping.py  check_dup.py  draw_font.py  mapping.json  mapping_chengkong_2_orig.json  mapping_orig_2_chengkong.json  remapped.txt  woh_chs_fixed.txt  woh_chs_fixed_remapped.txt
tools/@old/: ccit.cpp
tools/ccit/: Cargo.toml  orig_ccit.json
tools/ccit/dotgit/: config
unpack/PS-HuneX_Tools/dotgit/: config  index  packed-refs
unpack/PS-HuneX_Tools/dotgit/logs/refs/heads/: master
unpack/PS-HuneX_Tools/dotgit/objects/pack/: pack-1235b46a8d289e067c7a545597f7ad6154a5e939.idx  pack-1235b46a8d289e067c7a545597f7ad6154a5e939.pack  pack-1235b46a8d289e067c7a545597f7ad6154a5e939.rev
unpack/PS-HuneX_Tools/dotgit/refs/heads/: master
unpack/PS-HuneX_Tools/tools/: _extract_mzp.py  _extract_mzp_tiles.py  _unmzx.py
unpack/data00100/: FONT_GAIJI_00.mzp  FONT_zc_000.mzp  FONT_zc_001.mzp  FONT_zc_002.mzp  FONT_zc_003.mzp  FONT_zc_004.mzp  FONT_zc_005.mzp  FONT_zc_006.mzp  FONT_zc_007.mzp  FONT_zc_008.mzp  FONT_zc_009.mzp  FONT_zc_010.mzp  FONT_zc_011.mzp  FONT_zc_012.mzp  FONT_zc_013.mzp  FONT_zc_014.mzp  FONT_zc_015.mzp  FONT_zc_016.mzp  FONT_zc_017.mzp  FONT_zc_018.mzp  FONT_zc_019.mzp  FONT_zc_020.mzp  FONT_zc_021.mzp  FONT_zc_022.mzp  FONT_zc_023.mzp  FONT_zc_024.mzp  FONT_zc_025.mzp  FONT_zc_026.mzp  FONT_zc_027.mzp  FONT_zc_028.mzp  FONT_zc_029.mzp  FONT_zc_030.mzp  FONT_zc_031.mzp  FONT_zc_032.mzp  FONT_zc_033.mzp  FONT_zc_034.mzp  FONT_zc_H00.mzp  FONT_zc_H01.mzp  FONT_zc_font3_00.mzp  FONT_zc_font3_01.mzp  (+30 more)
unpack/data00100/FONT_zc_000/: tile1.ucp
unpack/data00200/: script_text_en.ctd  script_text_ja.ctd  script_text_zc.ctd  script_text_zt.ctd
