[package]
name = "ccit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ccit"
path = "src/ccit.rs"

[dependencies]
anyhow = "1.0.76"
binrw = "0.13.3"
clap = { version = "4.4.11", features = ["derive"] }
dbg_hex = "0.1.1"
env_logger = "0.10.1"
log = "0.4.20"
nom = "7.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
